kubernetes/decentralized-data-model/node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-node
  labels:
    app: local-node
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: local-node
  template:
    metadata:
      labels:
        app: local-node
    spec:
      containers:
        - name: chainlink
          image: smartcontract/chainlink:0.10.9
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6688
          resources: {}
          command: ["chainlink","local", "n", "-p", "/chainlink/.password", "-a",  "/chainlink/.api"]
          volumeMounts:
            - name: shared
              mountPath: /chainlink
      volumes:
        - name: shared
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: local-node-2
  labels:
    app: local-node-2
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: local-node-2
  template:
    metadata:
      labels:
        app: local-node-2
    spec:
      containers:
        - name: chainlink
          image: smartcontract/chainlink:0.10.9
          imagePullPolicy: "IfNotPresent"
          ports:
            - containerPort: 6688
          resources: {}
          command: ["chainlink","local", "n", "-p", "/chainlink/.password", "-a",  "/chainlink/.api"]
          volumeMounts:
            - name: shared
              mountPath: /chainlink
      volumes:
        - name: shared
          emptyDir: {}
