kubernetes/decentralized-data-model/node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-node-rinkeby
  namespace: chainlink-rinkeby
spec:
  rules:
  - host: "rinkeby1.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-node
            port:
              number: 6688
  - host: "rinkeby2.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-node-2
            port:
              number: 6688
